used stack overflow to solve issue involving reload, heroku, and react-router

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -126,7 +126,6 @@ padding: 0;
 .formHeader {
 	margin: 0px auto;
 	text-align: center;
-	line-height: 5px;
 	padding: 0px;
 	border: 2px solid green;
 	width: 100%;
